--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <head>
         <meta charset="utf8" />        
         <title>Ananas aus Caracas: rot.js tutorial game</title>
-
-        <!--script> src="/lib/jquery-3.4.1.min.js"</script-->
-
         <!-- https://cdn.jsdelivr.net/npm/rot-js@2/dist/rot.js -->
         <script src="/lib/rot.js"></script>
+        <script src="/lib/sprintf.min.js"></script>
         <script src="/assets/game.js"></script>
         <script src="/assets/utilities.js"></script>
         <script src="/assets/screens.js"></script>
