--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <script src="/assets/builder.js"></script>
         <script src="/assets/map.js"></script>
         <script src="/assets/entity.js"></script>
+        <script src="/assets/item.js"></script>
+        <script src="/assets/repository.js"></script>
         <script src="/assets/entities.js"></script>
+        <script src="/assets/items.js"></script>
 
 
     </head>
