--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <script src="/assets/entitymixins.js"></script>
         <script src="/assets/entities.js"></script>
         <script src="/assets/items.js"></script>
-
+        <script src="/assets/maps/cave.js"></script>
+        <script src="/assets/maps/bosscavern.js"></script>
 
     </head>
     <body>
