--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-
-
 <!doctype html>
 <html>
     <head>
         <meta charset="utf8" />        
-        <title>Ananas aus Caracas: rot.js tutorial game</title>
+        <title>Roguelike 1</title>
     </head>
     <body>
-        <h1>Ananas aus Caracas</h1>
+        <h1>Roguelike 1</h1>
     </body>
 </html>
 
