Add gamepad to the canvas.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     </head>
     <body>
         <h1>Roguelike 1</h1>
+        <div>
+            <button id="fullscreen">Fullscreen</button>
+        </div>
+        <div id="canvascontainer">
+            <canvas id="gamepad" width="960px" height="200px"></canvas>
+        </div>
     </body>
 </html>
 
